# TL3D-Filament-Manager

./: .gitignore  README.md  pyproject.toml
app/: __main__.py  pax12_bridge.py  rfid_service.py  spoolman_client.py
app/importers/: __init__.py  three_dfp.py
docs/: NEXT-STEPS.md  architecture.md  codex-guidelines.md  decision-log.md  gui-design.md  inventory-and-locations.md  label-printing.md  project-overview.md  requirements.md  rfid-design.md  rfid-references.md  roadmap.md  spoolman-api-investigation.md  spoolman-openapi.json
scripts/: capture_spoolman_schema.ps1
tests/: test_pax12_bridge.py  test_rfid_service.py  test_spoolman_client.py  test_three_dfp_importer.py
tests/fixtures/: three_dfp_inventory.csv
tools/bambu_rfid_identifier/: README.md  bambu_catalogue.py  catalogue_loader.py  decode_dump.py  decoder.py  gui.py  identify_tag.py  memory_inspector.py  requirements.txt  rfid_monitor.py  test_catalogue_loader.py  test_decoder.py  test_gui.py  test_identify_tag.py  test_memory_inspector.py  update_catalogue.py
